# tensor-library

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
bench/: CMakeLists.txt
cmake/: CompilerOptions.cmake  Dependencies.cmake  Utils.cmake
examples/: CMakeLists.txt
include/tensor/core/: dtype.hpp  expression.hpp  storage.hpp  tensor_base.hpp
include/tensor/core/device/: device.hpp  device_context.hpp  device_memory.hpp  device_properties.hpp  device_types.hpp
include/tensor/ops/: binary_ops.hpp  contraction_ops.hpp  matrix_ops.hpp  ops.hpp  reduction_ops.hpp  unary_ops.hpp
include/tensor/utils/: concepts.hpp  exceptions.hpp  type_traits.hpp
include/tf/core/: common.hpp  config.hpp  error.hpp  macros.hpp  types.hpp
include/tf/math/: blas.hpp  random.hpp  utils.hpp
include/tf/utils/: memory.hpp
scripts/: build.bat  build.sh  run_example.sh  test.sh  test_with_cuda.sh
src/: CMakeLists.txt
src/core/: types.cpp
src/core/device/: device.cpp  device_memory.cpp  device_properties.cpp
src/core/ops/: ops.cpp
src/math/: blas.cpp
tests/: CMakeLists.txt  test_config.hpp
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  common_test.cpp  config_test.cpp  error_test.cpp  expression_test.cpp  math_tests.cpp  matrix_ops_test.cpp  memory_test.cpp  reduction_ops_test.cpp  storage_test.cpp  tensor_test.cpp  types_test.cpp  unary_ops_test.cpp
tests/unit/core/: device_memory_test.cpp  device_properties_test.cpp  device_test.cpp  dtype_test.cpp
